--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "packageManager": "pnpm@10.11.0",
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/nodemailer": "^6.4.17",
     "@types/pg": "^8.15.2",
     "drizzle-kit": "^0.31.1",
     "tsx": "^4.19.4",
@@ -30,6 +31,7 @@
     "drizzle-orm": "^0.43.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^7.0.3",
     "pg": "^8.16.0"
   }
 }
